# School_Diary

./: .gitignore  pyproject.toml
schooldiary/: create_app.py  main.py
schooldiary/alembic/: env.py
schooldiary/alembic/versions/: 37c882ad0539_user_base_table.py  bde292b6e915_test_school.py
schooldiary/core/config/: __init__.py  config.py  database.py  server.py
schooldiary/database/helper/: helper.py
schooldiary/database/models/: __init__.py  base.py  school.py  user.py
